--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,6 @@ jobs:
           title: "$version"
           tag: "v$semver"
           draft: false
-          regex: "/^Release: #{semver}$/i"
+          regex: "/^Release: {semver}$/i"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
