--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: CupOfTea696/gh-action-auto-release@v1.0.2
         with:
-          title: "$version"
-          prefix: "v"
+          title: "v$semver"
           tag: "v$semver"
           draft: false
           regex: "/^Release: #{semver}$/i"
