--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,22 +1,22 @@
-name: Release
-
-on:
-  push:
-    branches: [ master ]
-
-jobs:
-  release:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: CupOfTea696/gh-action-auto-release@v1.0.2
-        with:
-          title: "v$semver"
-          tag: "v$semver"
-          draft: false
-          regex: "/^Release: #{semver}$/i"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#name: Release
+#
+#on:
+#  push:
+#    branches: [ master ]
+#
+#jobs:
+#  release:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: CupOfTea696/gh-action-auto-release@v1.0.2
+#        with:
+#          title: "v$semver"
+#          tag: "v$semver"
+#          draft: false
+#          regex: "/^Release: #{semver}$/i"
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 changelog:
   categories:
