--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
 
     permissions:
       contents: write
+      issues: write
+      pull-requests: write
 
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
