fix: Changed branches

--- a/.releaserc
+++ b/.releaserc
@@ -1,7 +1,12 @@
 {
   "branches": [
-    "master",
-    "develop"
+    {
+      "name": "master"
+    },
+    {
+      "name": "develop",
+      "prerelease": true
+    }
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
