chore: Disabled linters

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,3 +24,10 @@ jobs:
         uses: super-linter/super-linter@v6.3.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VALIDATE_MARKDOWN: false
+          VALIDATE_YAML: false
+          VALIDATE_NATURAL_LANGUAGE: false
+          VALIDATE_JSON: false
+          VALIDATE_GITLEAKS: false
+          VALIDATE_GITHUB_ACTIONS: false
+          VALIDATE_CHECKOV: false
