--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,33 +1,22 @@
-name: Lint
+name: PHP Linter
 
-on:
-  push: null
-  pull_request: null
-
+on: [pull_request, push]
 jobs:
   build:
-    name: Lint
+    name: Apply lint and PHP validation.
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      packages: read
-      statuses: write
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: Super-linter
-        uses: super-linter/super-linter@v6.3.0
+      - name: Lint Code Base
+        uses: github/super-linter/slim@v4
         env:
+          DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VALIDATE_MARKDOWN: false
-          VALIDATE_YAML: false
-          VALIDATE_NATURAL_LANGUAGE: false
-          VALIDATE_JSON: false
-          VALIDATE_GITLEAKS: false
-          VALIDATE_GITHUB_ACTIONS: false
-          VALIDATE_CHECKOV: false
+          SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          VALIDATE_PHP: true
+          VALIDATE_PHP_PHPCS: true
+          VALIDATE_ALL_CODEBASE: false
